# AgIsoTerminalDesigner

./: CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json  sw.js
src/: allowed_object_relationships.rs  editor_project.rs  interactive_rendering_simple.rs  lib.rs  main.rs  object_configuring.rs  object_defaults.rs  object_info.rs  object_rendering.rs  possible_events.rs  project_file.rs  smart_naming.rs
